--- a/gen-json-string.opam
+++ b/gen-json-string.opam
@@ -8,9 +8,10 @@ license: "ISC"
 homepage: "TBD"
 bug-reports: "TBD"
 depends: [
+  "dune" {build & >= "1.8.0"}
   "ocaml" {>= "4.06.0"}
-  "yojson" {>= "1.7.0" & < "2.0.0"}
   "ppx_deriving_yojson" {>= "3.5.1" & < "4.0.0"}
+  "yojson" {>= "1.7.0" & < "2.0.0"}
 ]
 build: [
   ["dune" "subst"] {pinned}
