Correct opam build instruction

--- a/gen-json-string.opam
+++ b/gen-json-string.opam
@@ -17,5 +17,5 @@ depends: [
 ]
 build: [
   ["dune" "subst"] {pinned}
-  ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs "gen_json_string.exe"]
 ]
